syntax = "proto3";

package row;

message BlockData {
    int32 id = 1;
    string tx_id = 2;
    int64 time = 3;
    repeated RowData rows = 4;
    enum JoinType {
        //不连接
    	JOIN_NONE = 0;
    	//(存在分裂，记录行列表最后一条行部分数据包含在下一个块中)
    	//行值连接
    	JOIN_ROW = 1;
    	//列值连接
    	JOIN_COLUMN = 2;
    }
    JoinType join = 5;
}

message RowData {
    int64 id = 1;
    uint32 op = 2;
    repeated ColumnData columns = 3;
}

message ColumnData {
    bytes data = 1;
}
