syntax = "proto3";

package table;

message Table {
    int32 id = 1;
    string name = 2;
    repeated Column columns = 3;
    PrimaryKey primary_key = 4;
    repeated ForeignKey foreign_keys = 5;
}

message Column {
    int32 id = 1;
    ColumnConfig config = 2;
    bool is_deleted = 3;
    int32 order = 4;
}

message ColumnConfig {
    string name = 1;
    uint32 type = 2;
    bytes default = 3;
    bool not_null = 4;
    string desc = 5;
}

message PrimaryKey {
    int32 column_id = 1;
    bool auto_increment = 2;
}

message ForeignKey {
    int32 column_id = 1;
    ReferenceKey reference = 2;
}

message ReferenceKey {
    int32 table_id = 1;
    int32 column_id = 2;
}
